parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS term
Rule 2     expression -> expression MINUS term
Rule 3     expression -> term
Rule 4     term -> term TIMES factor
Rule 5     term -> term DIVIDE factor
Rule 6     term -> term POWER factor
Rule 7     term -> factor
Rule 8     factor -> NUMBER
Rule 9     factor -> VARIABLE
Rule 10    factor -> CONSTANT
Rule 11    factor -> FUNCTION PAREN_OPEN arg_list PAREN_CLOSE
Rule 12    factor -> FUNCTION PAREN_OPEN PAREN_CLOSE
Rule 13    factor -> PAREN_OPEN expression PAREN_CLOSE
Rule 14    factor -> MINUS factor
Rule 15    factor -> PLUS factor
Rule 16    arg_list -> expression
Rule 17    arg_list -> arg_list COMMA expression

Terminals, with rules where they appear

COMMA                : 17
CONSTANT             : 10
DIVIDE               : 5
FUNCTION             : 11 12
MINUS                : 2 14
NUMBER               : 8
PAREN_CLOSE          : 11 12 13
PAREN_OPEN           : 11 12 13
PLUS                 : 1 15
POWER                : 6
TIMES                : 4
VARIABLE             : 9
error                : 

Nonterminals, with rules where they appear

arg_list             : 11 17
expression           : 1 2 13 16 17 0
factor               : 4 5 6 7 14 15
term                 : 1 2 3 4 5 6

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . term POWER factor
    (7) term -> . factor
    (8) factor -> . NUMBER
    (9) factor -> . VARIABLE
    (10) factor -> . CONSTANT
    (11) factor -> . FUNCTION PAREN_OPEN arg_list PAREN_CLOSE
    (12) factor -> . FUNCTION PAREN_OPEN PAREN_CLOSE
    (13) factor -> . PAREN_OPEN expression PAREN_CLOSE
    (14) factor -> . MINUS factor
    (15) factor -> . PLUS factor

    NUMBER          shift and go to state 6
    VARIABLE        shift and go to state 7
    CONSTANT        shift and go to state 8
    FUNCTION        shift and go to state 9
    PAREN_OPEN      shift and go to state 10
    MINUS           shift and go to state 4
    PLUS            shift and go to state 2

    expression                     shift and go to state 1
    term                           shift and go to state 3
    factor                         shift and go to state 5

state 1

    (0) S' -> expression .
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    PLUS            shift and go to state 11
    MINUS           shift and go to state 12


state 2

    (15) factor -> PLUS . factor
    (8) factor -> . NUMBER
    (9) factor -> . VARIABLE
    (10) factor -> . CONSTANT
    (11) factor -> . FUNCTION PAREN_OPEN arg_list PAREN_CLOSE
    (12) factor -> . FUNCTION PAREN_OPEN PAREN_CLOSE
    (13) factor -> . PAREN_OPEN expression PAREN_CLOSE
    (14) factor -> . MINUS factor
    (15) factor -> . PLUS factor

    NUMBER          shift and go to state 6
    VARIABLE        shift and go to state 7
    CONSTANT        shift and go to state 8
    FUNCTION        shift and go to state 9
    PAREN_OPEN      shift and go to state 10
    MINUS           shift and go to state 4
    PLUS            shift and go to state 2

    factor                         shift and go to state 13

state 3

    (3) expression -> term .
    (4) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor
    (6) term -> term . POWER factor

    PLUS            reduce using rule 3 (expression -> term .)
    MINUS           reduce using rule 3 (expression -> term .)
    $end            reduce using rule 3 (expression -> term .)
    PAREN_CLOSE     reduce using rule 3 (expression -> term .)
    COMMA           reduce using rule 3 (expression -> term .)
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 15
    POWER           shift and go to state 16


state 4

    (14) factor -> MINUS . factor
    (8) factor -> . NUMBER
    (9) factor -> . VARIABLE
    (10) factor -> . CONSTANT
    (11) factor -> . FUNCTION PAREN_OPEN arg_list PAREN_CLOSE
    (12) factor -> . FUNCTION PAREN_OPEN PAREN_CLOSE
    (13) factor -> . PAREN_OPEN expression PAREN_CLOSE
    (14) factor -> . MINUS factor
    (15) factor -> . PLUS factor

    NUMBER          shift and go to state 6
    VARIABLE        shift and go to state 7
    CONSTANT        shift and go to state 8
    FUNCTION        shift and go to state 9
    PAREN_OPEN      shift and go to state 10
    MINUS           shift and go to state 4
    PLUS            shift and go to state 2

    factor                         shift and go to state 17

state 5

    (7) term -> factor .

    TIMES           reduce using rule 7 (term -> factor .)
    DIVIDE          reduce using rule 7 (term -> factor .)
    POWER           reduce using rule 7 (term -> factor .)
    PLUS            reduce using rule 7 (term -> factor .)
    MINUS           reduce using rule 7 (term -> factor .)
    $end            reduce using rule 7 (term -> factor .)
    PAREN_CLOSE     reduce using rule 7 (term -> factor .)
    COMMA           reduce using rule 7 (term -> factor .)


state 6

    (8) factor -> NUMBER .

    TIMES           reduce using rule 8 (factor -> NUMBER .)
    DIVIDE          reduce using rule 8 (factor -> NUMBER .)
    POWER           reduce using rule 8 (factor -> NUMBER .)
    PLUS            reduce using rule 8 (factor -> NUMBER .)
    MINUS           reduce using rule 8 (factor -> NUMBER .)
    $end            reduce using rule 8 (factor -> NUMBER .)
    PAREN_CLOSE     reduce using rule 8 (factor -> NUMBER .)
    COMMA           reduce using rule 8 (factor -> NUMBER .)


state 7

    (9) factor -> VARIABLE .

    TIMES           reduce using rule 9 (factor -> VARIABLE .)
    DIVIDE          reduce using rule 9 (factor -> VARIABLE .)
    POWER           reduce using rule 9 (factor -> VARIABLE .)
    PLUS            reduce using rule 9 (factor -> VARIABLE .)
    MINUS           reduce using rule 9 (factor -> VARIABLE .)
    $end            reduce using rule 9 (factor -> VARIABLE .)
    PAREN_CLOSE     reduce using rule 9 (factor -> VARIABLE .)
    COMMA           reduce using rule 9 (factor -> VARIABLE .)


state 8

    (10) factor -> CONSTANT .

    TIMES           reduce using rule 10 (factor -> CONSTANT .)
    DIVIDE          reduce using rule 10 (factor -> CONSTANT .)
    POWER           reduce using rule 10 (factor -> CONSTANT .)
    PLUS            reduce using rule 10 (factor -> CONSTANT .)
    MINUS           reduce using rule 10 (factor -> CONSTANT .)
    $end            reduce using rule 10 (factor -> CONSTANT .)
    PAREN_CLOSE     reduce using rule 10 (factor -> CONSTANT .)
    COMMA           reduce using rule 10 (factor -> CONSTANT .)


state 9

    (11) factor -> FUNCTION . PAREN_OPEN arg_list PAREN_CLOSE
    (12) factor -> FUNCTION . PAREN_OPEN PAREN_CLOSE

    PAREN_OPEN      shift and go to state 18


state 10

    (13) factor -> PAREN_OPEN . expression PAREN_CLOSE
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . term POWER factor
    (7) term -> . factor
    (8) factor -> . NUMBER
    (9) factor -> . VARIABLE
    (10) factor -> . CONSTANT
    (11) factor -> . FUNCTION PAREN_OPEN arg_list PAREN_CLOSE
    (12) factor -> . FUNCTION PAREN_OPEN PAREN_CLOSE
    (13) factor -> . PAREN_OPEN expression PAREN_CLOSE
    (14) factor -> . MINUS factor
    (15) factor -> . PLUS factor

    NUMBER          shift and go to state 6
    VARIABLE        shift and go to state 7
    CONSTANT        shift and go to state 8
    FUNCTION        shift and go to state 9
    PAREN_OPEN      shift and go to state 10
    MINUS           shift and go to state 4
    PLUS            shift and go to state 2

    expression                     shift and go to state 19
    term                           shift and go to state 3
    factor                         shift and go to state 5

state 11

    (1) expression -> expression PLUS . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . term POWER factor
    (7) term -> . factor
    (8) factor -> . NUMBER
    (9) factor -> . VARIABLE
    (10) factor -> . CONSTANT
    (11) factor -> . FUNCTION PAREN_OPEN arg_list PAREN_CLOSE
    (12) factor -> . FUNCTION PAREN_OPEN PAREN_CLOSE
    (13) factor -> . PAREN_OPEN expression PAREN_CLOSE
    (14) factor -> . MINUS factor
    (15) factor -> . PLUS factor

    NUMBER          shift and go to state 6
    VARIABLE        shift and go to state 7
    CONSTANT        shift and go to state 8
    FUNCTION        shift and go to state 9
    PAREN_OPEN      shift and go to state 10
    MINUS           shift and go to state 4
    PLUS            shift and go to state 2

    term                           shift and go to state 20
    factor                         shift and go to state 5

state 12

    (2) expression -> expression MINUS . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . term POWER factor
    (7) term -> . factor
    (8) factor -> . NUMBER
    (9) factor -> . VARIABLE
    (10) factor -> . CONSTANT
    (11) factor -> . FUNCTION PAREN_OPEN arg_list PAREN_CLOSE
    (12) factor -> . FUNCTION PAREN_OPEN PAREN_CLOSE
    (13) factor -> . PAREN_OPEN expression PAREN_CLOSE
    (14) factor -> . MINUS factor
    (15) factor -> . PLUS factor

    NUMBER          shift and go to state 6
    VARIABLE        shift and go to state 7
    CONSTANT        shift and go to state 8
    FUNCTION        shift and go to state 9
    PAREN_OPEN      shift and go to state 10
    MINUS           shift and go to state 4
    PLUS            shift and go to state 2

    term                           shift and go to state 21
    factor                         shift and go to state 5

state 13

    (15) factor -> PLUS factor .

    TIMES           reduce using rule 15 (factor -> PLUS factor .)
    DIVIDE          reduce using rule 15 (factor -> PLUS factor .)
    POWER           reduce using rule 15 (factor -> PLUS factor .)
    PLUS            reduce using rule 15 (factor -> PLUS factor .)
    MINUS           reduce using rule 15 (factor -> PLUS factor .)
    $end            reduce using rule 15 (factor -> PLUS factor .)
    PAREN_CLOSE     reduce using rule 15 (factor -> PLUS factor .)
    COMMA           reduce using rule 15 (factor -> PLUS factor .)


state 14

    (4) term -> term TIMES . factor
    (8) factor -> . NUMBER
    (9) factor -> . VARIABLE
    (10) factor -> . CONSTANT
    (11) factor -> . FUNCTION PAREN_OPEN arg_list PAREN_CLOSE
    (12) factor -> . FUNCTION PAREN_OPEN PAREN_CLOSE
    (13) factor -> . PAREN_OPEN expression PAREN_CLOSE
    (14) factor -> . MINUS factor
    (15) factor -> . PLUS factor

    NUMBER          shift and go to state 6
    VARIABLE        shift and go to state 7
    CONSTANT        shift and go to state 8
    FUNCTION        shift and go to state 9
    PAREN_OPEN      shift and go to state 10
    MINUS           shift and go to state 4
    PLUS            shift and go to state 2

    factor                         shift and go to state 22

state 15

    (5) term -> term DIVIDE . factor
    (8) factor -> . NUMBER
    (9) factor -> . VARIABLE
    (10) factor -> . CONSTANT
    (11) factor -> . FUNCTION PAREN_OPEN arg_list PAREN_CLOSE
    (12) factor -> . FUNCTION PAREN_OPEN PAREN_CLOSE
    (13) factor -> . PAREN_OPEN expression PAREN_CLOSE
    (14) factor -> . MINUS factor
    (15) factor -> . PLUS factor

    NUMBER          shift and go to state 6
    VARIABLE        shift and go to state 7
    CONSTANT        shift and go to state 8
    FUNCTION        shift and go to state 9
    PAREN_OPEN      shift and go to state 10
    MINUS           shift and go to state 4
    PLUS            shift and go to state 2

    factor                         shift and go to state 23

state 16

    (6) term -> term POWER . factor
    (8) factor -> . NUMBER
    (9) factor -> . VARIABLE
    (10) factor -> . CONSTANT
    (11) factor -> . FUNCTION PAREN_OPEN arg_list PAREN_CLOSE
    (12) factor -> . FUNCTION PAREN_OPEN PAREN_CLOSE
    (13) factor -> . PAREN_OPEN expression PAREN_CLOSE
    (14) factor -> . MINUS factor
    (15) factor -> . PLUS factor

    NUMBER          shift and go to state 6
    VARIABLE        shift and go to state 7
    CONSTANT        shift and go to state 8
    FUNCTION        shift and go to state 9
    PAREN_OPEN      shift and go to state 10
    MINUS           shift and go to state 4
    PLUS            shift and go to state 2

    factor                         shift and go to state 24

state 17

    (14) factor -> MINUS factor .

    TIMES           reduce using rule 14 (factor -> MINUS factor .)
    DIVIDE          reduce using rule 14 (factor -> MINUS factor .)
    POWER           reduce using rule 14 (factor -> MINUS factor .)
    PLUS            reduce using rule 14 (factor -> MINUS factor .)
    MINUS           reduce using rule 14 (factor -> MINUS factor .)
    $end            reduce using rule 14 (factor -> MINUS factor .)
    PAREN_CLOSE     reduce using rule 14 (factor -> MINUS factor .)
    COMMA           reduce using rule 14 (factor -> MINUS factor .)


state 18

    (11) factor -> FUNCTION PAREN_OPEN . arg_list PAREN_CLOSE
    (12) factor -> FUNCTION PAREN_OPEN . PAREN_CLOSE
    (16) arg_list -> . expression
    (17) arg_list -> . arg_list COMMA expression
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . term POWER factor
    (7) term -> . factor
    (8) factor -> . NUMBER
    (9) factor -> . VARIABLE
    (10) factor -> . CONSTANT
    (11) factor -> . FUNCTION PAREN_OPEN arg_list PAREN_CLOSE
    (12) factor -> . FUNCTION PAREN_OPEN PAREN_CLOSE
    (13) factor -> . PAREN_OPEN expression PAREN_CLOSE
    (14) factor -> . MINUS factor
    (15) factor -> . PLUS factor

    PAREN_CLOSE     shift and go to state 26
    NUMBER          shift and go to state 6
    VARIABLE        shift and go to state 7
    CONSTANT        shift and go to state 8
    FUNCTION        shift and go to state 9
    PAREN_OPEN      shift and go to state 10
    MINUS           shift and go to state 4
    PLUS            shift and go to state 2

    arg_list                       shift and go to state 25
    expression                     shift and go to state 27
    term                           shift and go to state 3
    factor                         shift and go to state 5

state 19

    (13) factor -> PAREN_OPEN expression . PAREN_CLOSE
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    PAREN_CLOSE     shift and go to state 28
    PLUS            shift and go to state 11
    MINUS           shift and go to state 12


state 20

    (1) expression -> expression PLUS term .
    (4) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor
    (6) term -> term . POWER factor

    PLUS            reduce using rule 1 (expression -> expression PLUS term .)
    MINUS           reduce using rule 1 (expression -> expression PLUS term .)
    $end            reduce using rule 1 (expression -> expression PLUS term .)
    PAREN_CLOSE     reduce using rule 1 (expression -> expression PLUS term .)
    COMMA           reduce using rule 1 (expression -> expression PLUS term .)
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 15
    POWER           shift and go to state 16


state 21

    (2) expression -> expression MINUS term .
    (4) term -> term . TIMES factor
    (5) term -> term . DIVIDE factor
    (6) term -> term . POWER factor

    PLUS            reduce using rule 2 (expression -> expression MINUS term .)
    MINUS           reduce using rule 2 (expression -> expression MINUS term .)
    $end            reduce using rule 2 (expression -> expression MINUS term .)
    PAREN_CLOSE     reduce using rule 2 (expression -> expression MINUS term .)
    COMMA           reduce using rule 2 (expression -> expression MINUS term .)
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 15
    POWER           shift and go to state 16


state 22

    (4) term -> term TIMES factor .

    TIMES           reduce using rule 4 (term -> term TIMES factor .)
    DIVIDE          reduce using rule 4 (term -> term TIMES factor .)
    POWER           reduce using rule 4 (term -> term TIMES factor .)
    PLUS            reduce using rule 4 (term -> term TIMES factor .)
    MINUS           reduce using rule 4 (term -> term TIMES factor .)
    $end            reduce using rule 4 (term -> term TIMES factor .)
    PAREN_CLOSE     reduce using rule 4 (term -> term TIMES factor .)
    COMMA           reduce using rule 4 (term -> term TIMES factor .)


state 23

    (5) term -> term DIVIDE factor .

    TIMES           reduce using rule 5 (term -> term DIVIDE factor .)
    DIVIDE          reduce using rule 5 (term -> term DIVIDE factor .)
    POWER           reduce using rule 5 (term -> term DIVIDE factor .)
    PLUS            reduce using rule 5 (term -> term DIVIDE factor .)
    MINUS           reduce using rule 5 (term -> term DIVIDE factor .)
    $end            reduce using rule 5 (term -> term DIVIDE factor .)
    PAREN_CLOSE     reduce using rule 5 (term -> term DIVIDE factor .)
    COMMA           reduce using rule 5 (term -> term DIVIDE factor .)


state 24

    (6) term -> term POWER factor .

    TIMES           reduce using rule 6 (term -> term POWER factor .)
    DIVIDE          reduce using rule 6 (term -> term POWER factor .)
    POWER           reduce using rule 6 (term -> term POWER factor .)
    PLUS            reduce using rule 6 (term -> term POWER factor .)
    MINUS           reduce using rule 6 (term -> term POWER factor .)
    $end            reduce using rule 6 (term -> term POWER factor .)
    PAREN_CLOSE     reduce using rule 6 (term -> term POWER factor .)
    COMMA           reduce using rule 6 (term -> term POWER factor .)


state 25

    (11) factor -> FUNCTION PAREN_OPEN arg_list . PAREN_CLOSE
    (17) arg_list -> arg_list . COMMA expression

    PAREN_CLOSE     shift and go to state 29
    COMMA           shift and go to state 30


state 26

    (12) factor -> FUNCTION PAREN_OPEN PAREN_CLOSE .

    TIMES           reduce using rule 12 (factor -> FUNCTION PAREN_OPEN PAREN_CLOSE .)
    DIVIDE          reduce using rule 12 (factor -> FUNCTION PAREN_OPEN PAREN_CLOSE .)
    POWER           reduce using rule 12 (factor -> FUNCTION PAREN_OPEN PAREN_CLOSE .)
    PLUS            reduce using rule 12 (factor -> FUNCTION PAREN_OPEN PAREN_CLOSE .)
    MINUS           reduce using rule 12 (factor -> FUNCTION PAREN_OPEN PAREN_CLOSE .)
    $end            reduce using rule 12 (factor -> FUNCTION PAREN_OPEN PAREN_CLOSE .)
    PAREN_CLOSE     reduce using rule 12 (factor -> FUNCTION PAREN_OPEN PAREN_CLOSE .)
    COMMA           reduce using rule 12 (factor -> FUNCTION PAREN_OPEN PAREN_CLOSE .)


state 27

    (16) arg_list -> expression .
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    PAREN_CLOSE     reduce using rule 16 (arg_list -> expression .)
    COMMA           reduce using rule 16 (arg_list -> expression .)
    PLUS            shift and go to state 11
    MINUS           shift and go to state 12


state 28

    (13) factor -> PAREN_OPEN expression PAREN_CLOSE .

    TIMES           reduce using rule 13 (factor -> PAREN_OPEN expression PAREN_CLOSE .)
    DIVIDE          reduce using rule 13 (factor -> PAREN_OPEN expression PAREN_CLOSE .)
    POWER           reduce using rule 13 (factor -> PAREN_OPEN expression PAREN_CLOSE .)
    PLUS            reduce using rule 13 (factor -> PAREN_OPEN expression PAREN_CLOSE .)
    MINUS           reduce using rule 13 (factor -> PAREN_OPEN expression PAREN_CLOSE .)
    $end            reduce using rule 13 (factor -> PAREN_OPEN expression PAREN_CLOSE .)
    PAREN_CLOSE     reduce using rule 13 (factor -> PAREN_OPEN expression PAREN_CLOSE .)
    COMMA           reduce using rule 13 (factor -> PAREN_OPEN expression PAREN_CLOSE .)


state 29

    (11) factor -> FUNCTION PAREN_OPEN arg_list PAREN_CLOSE .

    TIMES           reduce using rule 11 (factor -> FUNCTION PAREN_OPEN arg_list PAREN_CLOSE .)
    DIVIDE          reduce using rule 11 (factor -> FUNCTION PAREN_OPEN arg_list PAREN_CLOSE .)
    POWER           reduce using rule 11 (factor -> FUNCTION PAREN_OPEN arg_list PAREN_CLOSE .)
    PLUS            reduce using rule 11 (factor -> FUNCTION PAREN_OPEN arg_list PAREN_CLOSE .)
    MINUS           reduce using rule 11 (factor -> FUNCTION PAREN_OPEN arg_list PAREN_CLOSE .)
    $end            reduce using rule 11 (factor -> FUNCTION PAREN_OPEN arg_list PAREN_CLOSE .)
    PAREN_CLOSE     reduce using rule 11 (factor -> FUNCTION PAREN_OPEN arg_list PAREN_CLOSE .)
    COMMA           reduce using rule 11 (factor -> FUNCTION PAREN_OPEN arg_list PAREN_CLOSE .)


state 30

    (17) arg_list -> arg_list COMMA . expression
    (1) expression -> . expression PLUS term
    (2) expression -> . expression MINUS term
    (3) expression -> . term
    (4) term -> . term TIMES factor
    (5) term -> . term DIVIDE factor
    (6) term -> . term POWER factor
    (7) term -> . factor
    (8) factor -> . NUMBER
    (9) factor -> . VARIABLE
    (10) factor -> . CONSTANT
    (11) factor -> . FUNCTION PAREN_OPEN arg_list PAREN_CLOSE
    (12) factor -> . FUNCTION PAREN_OPEN PAREN_CLOSE
    (13) factor -> . PAREN_OPEN expression PAREN_CLOSE
    (14) factor -> . MINUS factor
    (15) factor -> . PLUS factor

    NUMBER          shift and go to state 6
    VARIABLE        shift and go to state 7
    CONSTANT        shift and go to state 8
    FUNCTION        shift and go to state 9
    PAREN_OPEN      shift and go to state 10
    MINUS           shift and go to state 4
    PLUS            shift and go to state 2

    expression                     shift and go to state 31
    term                           shift and go to state 3
    factor                         shift and go to state 5

state 31

    (17) arg_list -> arg_list COMMA expression .
    (1) expression -> expression . PLUS term
    (2) expression -> expression . MINUS term

    PAREN_CLOSE     reduce using rule 17 (arg_list -> arg_list COMMA expression .)
    COMMA           reduce using rule 17 (arg_list -> arg_list COMMA expression .)
    PLUS            shift and go to state 11
    MINUS           shift and go to state 12

